--- a/public/css/sidenav.css
+++ b/public/css/sidenav.css
@@ -14,11 +14,19 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  border-radius: 0.25rem;
+  margin: 1px 0;
+}
+
+.sidenav .nav .nav-item {
+  margin: 0;
 }
 
 .sidenav .nav .nav-link {
   --mdb-nav-link-color: var(--mdb-secondary-text-emphasis);
   font-size: 0.89rem;
+  border-radius: 0.25rem;
+  margin: 2px 0;
 }
 
 .sidenav .nav-link:hover {
@@ -29,19 +37,51 @@
   background-color: var(--mdb-primary-bg-subtle);
 }
 
+.sidenav .nav-item:has(.collapse) > .nav-link.active,
+.sidenav .nav-item:has(.collapse) > a.active {
+  background-color: rgba(18, 102, 241, 0.05);
+}
+
+.sidenav .nav-item:has(.collapse):has(.nav-link.active) > .nav-link,
+.sidenav .nav-item:has(.collapse):has(.nav-link.active) > a {
+  background-color: rgba(18, 102, 241, 0.05);
+}
+
+.sidenav .nav-item:not(:has(.collapse)) > .nav-link.active {
+  background-color: var(--mdb-primary-bg-subtle) !important;
+}
+
 .sidenav .nav .nav .nav-link {
   --mdb-nav-link-color: var(--mdb-secondary-text-emphasis);
   font-size: 0.78rem;
-  padding-left: 2rem;
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;
+  padding: 0.4rem 2rem;
+  margin: 2px 0;
+}
+
+.sidenav .nav .nav .nav .nav-link {
+  padding: 0.4rem 2rem 0.35rem;
+  font-size: 0.75rem;
+  border-radius: 0.25rem;
+  margin: 2px 0;
+}
+
+.sidenav .nav .nav .nav .nav-link.active {
+  background-color: var(--mdb-primary-bg-subtle);
+}
+
+.sidenav .nav .nav .nav .nav .nav-link {
+  padding: 0.4rem 2rem;
+  font-size: 0.72rem;
+  border-radius: 0.25rem;
+  margin: 2px 0;
 }
 
 .sidenav .sidenav-collapse-icon {
   transition: transform 0.3s ease;
 }
 
-.sidenav .nav-item:has(> .collapse.show) > .nav-link .sidenav-collapse-icon {
+.sidenav .nav-item:has(> .collapse.show) > .nav-link .sidenav-collapse-icon,
+.sidenav .nav-item:has(> .collapse.show) > a .sidenav-collapse-icon {
   transform: rotate(180deg);
 }
 
